<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ubicacion">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.example.inmobiliariamovil.ui.ubicacion.UbicacionFragment"
        android:label="@string/menu_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliariamovil.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmobiliariamovil.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_inmuebleFragment"
            app:destination="@id/inmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/inmuebleFragment"
        android:name="com.example.inmobiliariamovil.ui.inmuebles.InmuebleFragment"
        android:label="fragment_inmueble"
        tools:layout="@layout/fragment_inmueble" >
        <action
            android:id="@+id/action_inmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="com.example.inmobiliariamovil.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmobiliariamovil.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />
    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.example.inmobiliariamovil.ui.pagos.PagosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_pagos" />
</navigation>